Crash after open EXR format #44132

Closed
opened 2015-03-25 14:36:55 +01:00 by Cenek Strichel · 22 comments

System Information
W8.1 64b

Blender Version
Blender 2.47 RC2 and 87cff57

Short description of error
Rendered EXR is crashed when you try open it in Node editor.

  1. open scene:
    EXRcrash.blend

  2. render frame

  3. open rendered exr created by File Output node

  4. Crash

**System Information** W8.1 64b **Blender Version** Blender 2.47 RC2 and 87cff57 **Short description of error** Rendered EXR is crashed when you try open it in Node editor. 1) open scene: [EXRcrash.blend](https://archive.blender.org/developer/F154968/EXRcrash.blend) 2) render frame 3) open rendered exr created by File Output node 4) Crash
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Can't confirm that here, maybe it's related to your crash in #43903. Could you do the [dll ]] test again? Would also be interesting to see your [ http:*blender.stackexchange.com/a/9121 | system-info.txt .

Can't confirm that here, maybe it's related to your crash in #43903. Could you do the [dll ]] test again? Would also be interesting to see your [[ http:*blender.stackexchange.com/a/9121 | system-info.txt ](http:*download.blender.org/ftp/sergey/softwaregl/win64/opengl32.dll).
Author

It is not related to my old bug because it is now crashed on another computer, sorry I didnt add my configuration. It is Core i7, Geforce 770. I also see, that I wrote 2.47, I mean 2.74 of course :) Previous bug what you mentioned is ok on current configuration. Are you sure that you are testing exr file from File Output? not PNG from normal Output. Here is my output file:
www.cenda.cz/temp/exr.0097.exr

, which is crash after load to Node editor (to composition as Image node). I tried it load to Node editor to Material and it is working well, so problem is only in Composition Node Editor. It is also crashing with your dll.

crash.png

It is not related to my old bug because it is now crashed on another computer, sorry I didnt add my configuration. It is Core i7, Geforce 770. I also see, that I wrote 2.47, I mean 2.74 of course :) Previous bug what you mentioned is ok on current configuration. Are you sure that you are testing exr file from File Output? not PNG from normal Output. Here is my output file: www.cenda.cz/temp/exr.0097.exr , which is crash after load to Node editor (to composition as Image node). I tried it load to Node editor to Material and it is working well, so problem is only in Composition Node Editor. It is also crashing with your dll. ![crash.png](https://archive.blender.org/developer/F155000/crash.png)
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Okay can confirm that now .

@LukasTonne, getting a failed assert in ImageNode::convertToOperations(...):

BLI_assert(combined_operation != NULL);

Adding a non-Null check solves the crash but I still get errors printed to the console and the image that shows up doesn't really look like I would expect it. Looks like something goes wrong during saving from the compositor?

Okay can confirm that now . @LukasTonne, getting a failed assert in ImageNode::convertToOperations(...): ``` BLI_assert(combined_operation != NULL); ``` Adding a non-Null check solves the crash but I still get errors printed to the console and the image that shows up doesn't really look like I would expect it. Looks like something goes wrong during saving from the compositor?
Lukas Tönne was assigned by Julian Eisel 2015-03-28 17:29:57 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

@JulianEisel, Lukas is the wrong guy for the compo issues. If the issue still exists please re-assign to me.

@JulianEisel, Lukas is the wrong guy for the compo issues. If the issue still exists please re-assign to me.
Lukas Tönne was unassigned by Julian Eisel 2015-04-14 16:03:22 +02:00
Sergey Sharybin was assigned by Julian Eisel 2015-04-14 16:03:22 +02:00
Member

Yep, it still exists.

Yep, it still exists.

Added subscriber: @John_Lancaster

Added subscriber: @John_Lancaster

This has been around for SEVERAL versions.

This has been around for SEVERAL versions.
Sergey Sharybin removed their assignment 2015-04-21 10:38:49 +02:00
Dalai Felinto was assigned by Sergey Sharybin 2015-04-21 10:38:49 +02:00

Added subscriber: @dfelinto

Added subscriber: @dfelinto

I can't really reproduce crash in current releases, but can see the crash with current master. And there i need some inputs from @dfelinto.

Dalai, the issue is that it's a multilayer file and for some reason it does not have any views. I'm not sure if it's issue with saving the file (missing view on save) or some missing NULL pointer check on read. But i would only say here that files without views should not crash blender.

I can't really reproduce crash in current releases, but can see the crash with current master. And there i need some inputs from @dfelinto. Dalai, the issue is that it's a multilayer file and for some reason it does not have any views. I'm not sure if it's issue with saving the file (missing view on save) or some missing NULL pointer check on read. But i would only say here that files without views should not crash blender.

In Mac I did get a crash with 2.74 74df307 (aka, the commit before multiview):

BLI_assert failed: /Users/dfelinto/blender/git/blender/source/blender/compositor/nodes/COM_ImageNode.cpp:110, convertToOperations(), at 'combined_operation != __null'

- 0  0x00007fff8f922866 in __pthread_kill ()
- 1  0x00007fff8ebca35c in pthread_kill ()
- 2  0x00000001060e11b6 in abort () at date_time_facet.hpp:226
- 3  0x0000000100dca3fd in ImageNode::convertToOperations (this=0x11dde3200, converter=@0x11a328a88, context=@0x11ddbbcc0) at /Users/dfelinto/blender/git/blender/source/blender/compositor/nodes/COM_ImageNode.cpp:110
- 4  0x0000000100da3a09 in NodeOperationBuilder::convertToOperations (this=0x11a328b30, system=0x11ddbbcc0) at /Users/dfelinto/blender/git/blender/source/blender/compositor/intern/COM_NodeOperationBuilder.cpp:68
- 5  0x0000000100d9f0d6 in ExecutionSystem::ExecutionSystem (this=0x11ddbbcc0, rd=0x10e3c3d40, scene=0x10e3c3c08, editingtree=0x11f00b498, rendering=false, fastcalculation=false, viewSettings=0x10e3c4e68, displaySettings=0x10e3c4f08) at /Users/dfelinto/blender/git/blender/source/blender/compositor/intern/COM_ExecutionSystem.cpp:68
- 6  0x0000000100d9f417 in ExecutionSystem::ExecutionSystem (this=0x11ddbbcc0, rd=0x10e3c3d40, scene=0x10e3c3c08, editingtree=0x11f00b498, rendering=false, fastcalculation=false, viewSettings=0x10e3c4e68, displaySettings=0x10e3c4f08) at /Users/dfelinto/blender/git/blender/source/blender/compositor/intern/COM_ExecutionSystem.cpp:104
- 7  0x0000000100d9eced in COM_execute (rd=0x10e3c3d40, scene=0x10e3c3c08, editingtree=0x11f00b498, rendering=0, viewSettings=0x10e3c4e68, displaySettings=0x10e3c4f08) at /Users/dfelinto/blender/git/blender/source/blender/compositor/intern/COM_compositor.cpp:97
- 8  0x0000000101152753 in ntreeCompositExecTree (scene=0x10e3c3c08, ntree=0x11f00b498, rd=0x10e3c3d40, rendering=0, do_preview=1, view_settings=0x10e3c4e68, display_settings=0x10e3c4f08) at /Users/dfelinto/blender/git/blender/source/blender/nodes/composite/node_composite_tree.c:232
- 9  0x00000001001f1382 in compo_startjob (cjv=0x10e99c178, stop=0x11f01567c, do_update=0x11f01567a, progress=0x11f015680) at /Users/dfelinto/blender/git/blender/source/blender/editors/space_node/node_edit.c:241
- 10 0x0000000100146752 in do_job_thread (job_v=0x11f015608) at /Users/dfelinto/blender/git/blender/source/blender/windowmanager/intern/wm_jobs.c:328
- 11 0x00000001014bede1 in tslot_thread_start (tslot_p=0x10e9df188) at /Users/dfelinto/blender/git/blender/source/blender/blenlib/intern/threads.c:251
- 12 0x00007fff8ebc9899 in _pthread_body ()
- 13 0x00007fff8ebc972a in _pthread_start ()
#14 0x00007fff8ebcdfc9 in thread_start ()

My suspicious is that the compositor assumes to have a 'Combined' pass and the image doesnt have it (it has an Image pass instead).

Now to master: It's fine for the file to not have views, but RenderResult should always have a view. The initial crash is indeed multiview related, but it's simply masking the real problem which is likely the same as above. I can help looking at it later.
That said I should be able to help with this since I

In Mac I did get a crash with 2.74 74df307 (aka, the commit before multiview): ``` BLI_assert failed: /Users/dfelinto/blender/git/blender/source/blender/compositor/nodes/COM_ImageNode.cpp:110, convertToOperations(), at 'combined_operation != __null' - 0 0x00007fff8f922866 in __pthread_kill () - 1 0x00007fff8ebca35c in pthread_kill () - 2 0x00000001060e11b6 in abort () at date_time_facet.hpp:226 - 3 0x0000000100dca3fd in ImageNode::convertToOperations (this=0x11dde3200, converter=@0x11a328a88, context=@0x11ddbbcc0) at /Users/dfelinto/blender/git/blender/source/blender/compositor/nodes/COM_ImageNode.cpp:110 - 4 0x0000000100da3a09 in NodeOperationBuilder::convertToOperations (this=0x11a328b30, system=0x11ddbbcc0) at /Users/dfelinto/blender/git/blender/source/blender/compositor/intern/COM_NodeOperationBuilder.cpp:68 - 5 0x0000000100d9f0d6 in ExecutionSystem::ExecutionSystem (this=0x11ddbbcc0, rd=0x10e3c3d40, scene=0x10e3c3c08, editingtree=0x11f00b498, rendering=false, fastcalculation=false, viewSettings=0x10e3c4e68, displaySettings=0x10e3c4f08) at /Users/dfelinto/blender/git/blender/source/blender/compositor/intern/COM_ExecutionSystem.cpp:68 - 6 0x0000000100d9f417 in ExecutionSystem::ExecutionSystem (this=0x11ddbbcc0, rd=0x10e3c3d40, scene=0x10e3c3c08, editingtree=0x11f00b498, rendering=false, fastcalculation=false, viewSettings=0x10e3c4e68, displaySettings=0x10e3c4f08) at /Users/dfelinto/blender/git/blender/source/blender/compositor/intern/COM_ExecutionSystem.cpp:104 - 7 0x0000000100d9eced in COM_execute (rd=0x10e3c3d40, scene=0x10e3c3c08, editingtree=0x11f00b498, rendering=0, viewSettings=0x10e3c4e68, displaySettings=0x10e3c4f08) at /Users/dfelinto/blender/git/blender/source/blender/compositor/intern/COM_compositor.cpp:97 - 8 0x0000000101152753 in ntreeCompositExecTree (scene=0x10e3c3c08, ntree=0x11f00b498, rd=0x10e3c3d40, rendering=0, do_preview=1, view_settings=0x10e3c4e68, display_settings=0x10e3c4f08) at /Users/dfelinto/blender/git/blender/source/blender/nodes/composite/node_composite_tree.c:232 - 9 0x00000001001f1382 in compo_startjob (cjv=0x10e99c178, stop=0x11f01567c, do_update=0x11f01567a, progress=0x11f015680) at /Users/dfelinto/blender/git/blender/source/blender/editors/space_node/node_edit.c:241 - 10 0x0000000100146752 in do_job_thread (job_v=0x11f015608) at /Users/dfelinto/blender/git/blender/source/blender/windowmanager/intern/wm_jobs.c:328 - 11 0x00000001014bede1 in tslot_thread_start (tslot_p=0x10e9df188) at /Users/dfelinto/blender/git/blender/source/blender/blenlib/intern/threads.c:251 - 12 0x00007fff8ebc9899 in _pthread_body () - 13 0x00007fff8ebc972a in _pthread_start () #14 0x00007fff8ebcdfc9 in thread_start () ``` My suspicious is that the compositor assumes to have a 'Combined' pass and the image doesnt have it (it has an Image pass instead). Now to master: It's fine for the file to not have views, but RenderResult should always have a view. The initial crash is indeed multiview related, but it's simply masking the real problem which is likely the same as above. I can help looking at it later. That said I should be able to help with this since I

@dfelinto, I'm happy to look into compo-related issue, but for that i need multiview-related fixed first. Think it is possible to reproduce multiview-related one without touching compositor?

@dfelinto, I'm happy to look into compo-related issue, but for that i need multiview-related fixed first. Think it is possible to reproduce multiview-related one without touching compositor?

@Sergey in master if you hide the properties panel of the Node editor and add the Image Node with the broken EXR you get the following crash:

BLI_assert failed: /Users/dfelinto/blender/git/blender/source/blender/compositor/nodes/COM_ImageNode.cpp:128, convertToOperations(), at 'combined_operation != __null'
Program received signal SIGABRT, Aborted.

- 0  0x00007fff8f922866 in __pthread_kill ()
- 1  0x00007fff8ebca35c in pthread_kill ()
- 2  0x00007fff8d2acb1a in abort ()
- 3  0x0000000100ca5446 in ImageNode::convertToOperations (this=0x107e2ed10, converter=@0x113580a38, context=@0x107ec2c60) at /Users/dfelinto/blender/git/blender/source/blender/compositor/nodes/COM_ImageNode.cpp:128
- 4  0x0000000100c7ea29 in NodeOperationBuilder::convertToOperations (this=0x113580ae0, system=0x107ec2c60) at /Users/dfelinto/blender/git/blender/source/blender/compositor/intern/COM_NodeOperationBuilder.cpp:68
- 5  0x0000000100c7a0d5 in ExecutionSystem::ExecutionSystem (this=0x107ec2c60, rd=0x108ab7140, scene=0x108ab7008, editingtree=0x10da57af8, rendering=false, fastcalculation=false, viewSettings=0x108ab8290, displaySettings=0x108ab8330, viewName=0x103aa7a58 "") at /Users/dfelinto/blender/git/blender/source/blender/compositor/intern/COM_ExecutionSystem.cpp:70
- 6  0x0000000100c7a42a in ExecutionSystem::ExecutionSystem (this=0x107ec2c60, rd=0x108ab7140, scene=0x108ab7008, editingtree=0x10da57af8, rendering=false, fastcalculation=false, viewSettings=0x108ab8290, displaySettings=0x108ab8330, viewName=0x103aa7a58 "") at /Users/dfelinto/blender/git/blender/source/blender/compositor/intern/COM_ExecutionSystem.cpp:106
- 7  0x0000000100c79cd1 in COM_execute (rd=0x108ab7140, scene=0x108ab7008, editingtree=0x10da57af8, rendering=0, viewSettings=0x108ab8290, displaySettings=0x108ab8330, viewName=0x103aa7a58 "") at /Users/dfelinto/blender/git/blender/source/blender/compositor/intern/COM_compositor.cpp:98
- 8  0x0000000100feca03 in ntreeCompositExecTree (scene=0x108ab7008, ntree=0x10da57af8, rd=0x108ab7140, rendering=0, do_preview=1, view_settings=0x108ab8290, display_settings=0x108ab8330, view_name=0x103aa7a58 "") at /Users/dfelinto/blender/git/blender/source/blender/nodes/composite/node_composite_tree.c:233
- 9  0x00000001000ceffb in compo_startjob (cjv=0x10daacca8, stop=0x11301b4bc, do_update=0x11301b4ba, progress=0x11301b4c0) at /Users/dfelinto/blender/git/blender/source/blender/editors/space_node/node_edit.c:243
- 10 0x0000000100023a70 in do_job_thread (job_v=0x11301b448) at /Users/dfelinto/blender/git/blender/source/blender/windowmanager/intern/wm_jobs.c:328
- 11 0x0000000101334511 in tslot_thread_start (tslot_p=0x113039678) at /Users/dfelinto/blender/git/blender/source/blender/blenlib/intern/threads.c:252
- 12 0x00007fff8ebc9899 in _pthread_body ()
- 13 0x00007fff8ebc972a in _pthread_start ()
#14 0x00007fff8ebcdfc9 in thread_start ()

Which seems to me exactly as the original error, and not related to multiview. What I propose is, you look at this compo issue, and once this is fixed I enable the property panel and fix the multiview part. There is a (high) chance that the multiview issue is gone once the main one is solved.

I can help you looking at it later, but I would rather tackle the other pending multiview problems first.

@Sergey in master if you hide the properties panel of the Node editor and add the Image Node with the broken EXR you get the following crash: ``` BLI_assert failed: /Users/dfelinto/blender/git/blender/source/blender/compositor/nodes/COM_ImageNode.cpp:128, convertToOperations(), at 'combined_operation != __null' Program received signal SIGABRT, Aborted. - 0 0x00007fff8f922866 in __pthread_kill () - 1 0x00007fff8ebca35c in pthread_kill () - 2 0x00007fff8d2acb1a in abort () - 3 0x0000000100ca5446 in ImageNode::convertToOperations (this=0x107e2ed10, converter=@0x113580a38, context=@0x107ec2c60) at /Users/dfelinto/blender/git/blender/source/blender/compositor/nodes/COM_ImageNode.cpp:128 - 4 0x0000000100c7ea29 in NodeOperationBuilder::convertToOperations (this=0x113580ae0, system=0x107ec2c60) at /Users/dfelinto/blender/git/blender/source/blender/compositor/intern/COM_NodeOperationBuilder.cpp:68 - 5 0x0000000100c7a0d5 in ExecutionSystem::ExecutionSystem (this=0x107ec2c60, rd=0x108ab7140, scene=0x108ab7008, editingtree=0x10da57af8, rendering=false, fastcalculation=false, viewSettings=0x108ab8290, displaySettings=0x108ab8330, viewName=0x103aa7a58 "") at /Users/dfelinto/blender/git/blender/source/blender/compositor/intern/COM_ExecutionSystem.cpp:70 - 6 0x0000000100c7a42a in ExecutionSystem::ExecutionSystem (this=0x107ec2c60, rd=0x108ab7140, scene=0x108ab7008, editingtree=0x10da57af8, rendering=false, fastcalculation=false, viewSettings=0x108ab8290, displaySettings=0x108ab8330, viewName=0x103aa7a58 "") at /Users/dfelinto/blender/git/blender/source/blender/compositor/intern/COM_ExecutionSystem.cpp:106 - 7 0x0000000100c79cd1 in COM_execute (rd=0x108ab7140, scene=0x108ab7008, editingtree=0x10da57af8, rendering=0, viewSettings=0x108ab8290, displaySettings=0x108ab8330, viewName=0x103aa7a58 "") at /Users/dfelinto/blender/git/blender/source/blender/compositor/intern/COM_compositor.cpp:98 - 8 0x0000000100feca03 in ntreeCompositExecTree (scene=0x108ab7008, ntree=0x10da57af8, rd=0x108ab7140, rendering=0, do_preview=1, view_settings=0x108ab8290, display_settings=0x108ab8330, view_name=0x103aa7a58 "") at /Users/dfelinto/blender/git/blender/source/blender/nodes/composite/node_composite_tree.c:233 - 9 0x00000001000ceffb in compo_startjob (cjv=0x10daacca8, stop=0x11301b4bc, do_update=0x11301b4ba, progress=0x11301b4c0) at /Users/dfelinto/blender/git/blender/source/blender/editors/space_node/node_edit.c:243 - 10 0x0000000100023a70 in do_job_thread (job_v=0x11301b448) at /Users/dfelinto/blender/git/blender/source/blender/windowmanager/intern/wm_jobs.c:328 - 11 0x0000000101334511 in tslot_thread_start (tslot_p=0x113039678) at /Users/dfelinto/blender/git/blender/source/blender/blenlib/intern/threads.c:252 - 12 0x00007fff8ebc9899 in _pthread_body () - 13 0x00007fff8ebc972a in _pthread_start () #14 0x00007fff8ebcdfc9 in thread_start () ``` Which seems to me exactly as the original error, and not related to multiview. What I propose is, you look at this compo issue, and once this is fixed I enable the property panel and fix the multiview part. There is a (high) chance that the multiview issue is gone once the main one is solved. I can help you looking at it later, but I would rather tackle the other pending multiview problems first.
Dalai Felinto removed their assignment 2015-04-22 14:48:25 +02:00
Sergey Sharybin was assigned by Dalai Felinto 2015-04-22 14:48:25 +02:00

@Sergey btw, you can enable exr_printf() in openexr_api.cpp::1615 to get tons of useful debug printing.

@Sergey btw, you can enable exr_printf() in openexr_api.cpp::1615 to get tons of useful debug printing.

@Sergey, commit 1076adb fixed the multiview part of this issue, now this is all yours :) but let me know if you need any help

@Sergey, commit 1076adb fixed the multiview part of this issue, now this is all yours :) but let me know if you need any help

This issue was referenced by 3de45ee7fe

This issue was referenced by 3de45ee7fe451ab4267b824a569a2173660d2575

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3de45ee7fe.

Closed by commit 3de45ee7fe.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44132
No description provided.