Fix T44132: Crash after open EXR format

Was own mistake on adding Alpha socket for Combined pass.