source/blender/nodes/composite/nodes/node_composite_image.c
@@ -190,7 +190,7 @@ static void cmp_node_image_add_multilayer_outputs(bNodeTree *ntree, bNode *node,
 		sockdata->pass_index = index;
 		sockdata->pass_flag = rpass->passtype;
 
-		if (STREQ(rpass->chan_id, "RGBA")) {
+		if (rpass->passtype == SCE_PASS_COMBINED) {
 			sock = nodeAddStaticSocket(ntree, node, SOCK_OUT, SOCK_FLOAT, PROP_NONE, "Alpha", "Alpha");
 			sockdata = MEM_callocN(sizeof(NodeImageLayer), "node image layer");
 			sock->storage = sockdata;
